Fixed spacing issues on homepage

--- a/app/assets/stylesheets/homepage.css
+++ b/app/assets/stylesheets/homepage.css
@@ -134,7 +134,7 @@ hr {
 }
 
 .brand-title {
-  margin-top: 100px;
+  margin-top: 70px;
   text-align: center;
   font-size: 200%;
   font-family: 'Halant','serif';
@@ -142,7 +142,7 @@ hr {
 }
 
 .labels-worked {
-  font-size: 120%;
+  font-size: 150%;
   text-align: center;
   line-height: 60px;
   color: #686767;
